# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-control-room"
version = "0.1.1"
description = "A module to combine other Dareplane modules into a full system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.3",
    "dareplane-utils>=0.0.20",
    "dash>=2.10.2",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "fire>=0.5.0",
    "Flask>=2.2.5",
    "itsdangerous>=2.1.2",
    "Jinja2>=3.1.2",
    "MarkupSafe>=2.1.3",
    "packaging>=23.1",
    "plotly>=5.15.0",
    "psutil>=5.9.5",
    "pylsl>=1.16.1",
    "six>=1.16.0",
    "tenacity>=8.2.2",
    "termcolor>=2.3.0",
    "ujson>=5.7.0",
    "waitress>=2.1.2",
    "Werkzeug>=2.2.3",
]

[project.optional-dependencies]
test = [
    "mne",
    "pytest",
    "pyxdf",
    "tomli-w"
]

[tool.setuptools.packages.find]
include = ["control_room*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = ["ignore:::.*fire.core"]

